# coding_tracker

./: pyproject.toml
coding_tracker/: start_timer.py  timer_initialize.sql  track_time.py
tests/: test_coding_tracker.py
