[tool.poetry]
name = "coding_tracker"
version = "0.1.0"
description = "Tracks how much time I've been coding"
authors = ["vince <vince.siu4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
